crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__raw_byte_literal_2.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..6,
            value: BytesLiteral(
                ExprBytesLiteral {
                    range: 0..6,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..6,
                                value: [
                                    92,
                                    92,
                                ],
                                flags: BytesLiteralFlags {
                                    quote_style: Single,
                                    prefix: Raw {
                                        uppercase_r: false,
                                    },
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
