crates/sifr_python_parser/src/snapshots/sifr_python_parser__string__tests__raw_fstring.snap
---
source: crates/sifr_python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        StmtExpr {
            range: 0..7,
            value: FString(
                ExprFString {
                    range: 0..7,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..7,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 3..6,
                                                expression: Name(
                                                    ExprName {
                                                        range: 4..5,
                                                        id: "x",
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Raw {
                                            uppercase_r: false,
                                        },
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
